# python_google_speak

./: .gitignore  .gitlab-ci.yml  .project  CHANGES.md  MANIFEST.in  README.md  README.txt  google_speak  pyproject.toml  requirements.txt  run_python_google_speak_test_suite.py  setup.py
.circleci/: config.yml
debian/: .gitignore
debian/DEBIAN/: control  postinst
python_google_speak/: cli.py  google_speak.py  speech_generator.py  speech_output.py
python_google_speak/test/: test_python_google_speak.py
