[tool.poetry]
name = "python_google_speak"
version = "0.2.0"
description = "Simple class to create speech files using the Google translate URL"
authors = ["Marcus Rickert <marcus.rickert@web.de>"]
include = [
  "README.md",
  "CHANGES.md",
  "LICENSE",
  "include python_google_speak/test/data/*",
]

[tool.poetry.scripts]
google_speak = "python_google_speak.cli:main"

[tool.poetry.dependencies]
python = "^3.5"
requests  = "2.27.1"
playsound = "1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
